--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@tabler/icons": "^1.96.0",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
+    "react-toastify": "^9.0.8",
+    "recoil": "^0.7.5",
+    "recoil-persist": "^4.2.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
