bug: disable temp add transactions

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_URL_API=http://127.0.0.1:1234/api
+VITE_URL_API=http://47.250.130.38:1234/api
+VITE_STORAGE_API=http://47.250.130.38:1234
 VITE_URL_OCR=http://47.250.130.38:8888/scan
