--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_URL_API=http://47.250.130.38:1234/api
-VITE_STORAGE_API=http://47.250.130.38:1234
-VITE_URL_OCR=http://47.250.130.38:8888/scan
+VITE_URL_API=https://api.pawang.studio/api
+VITE_STORAGE_API=https://api.pawang.studio
+VITE_URL_OCR=http://127.0.0.1:8888/scan
